# gtj-webapp

./: .env.example  LICENSE  README.md  index.html  pyproject.toml
webapp/: webapp.py
