[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["David Corbitt <david@realityplatforms.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13"
streamlit = "^1.17.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
