[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["David Corbitt <david@realityplatforms.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.17.0"
requests = "^2.28.2"
openai = "^0.26.1"
langchain = "^0.0.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
